<resources>
    <string name="app_name">Sensation BLE</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_about">About</string>
    <string name="scan_description">Click Bluetooth icon to scan devices, then click the device name to connect</string>
    <string name="btn_scan">Scan</string>
    <string name="about_title">Sensation BLE Application</string>
    <string name="about_message">Copyright. 2016\n\nIcon is designed by Pixel Buddha</string>
    <string name="scan_scanning">Scanning BLE Devices…</string>
    <string name="unknown_device">Unknown Device</string>
    <string name="ble_not_supported">Bluetooth LE is not supported on this device</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported on this device</string>
    <string name="btn_stop">Stop</string>
    <string name="refresh">Refresh</string>
    <string name="bpm">BPM</string>
    <string name="steps">Steps</string>
    <string name="disconnect">Disconnect</string>
    <string name="btc_age">Change Info</string>
    <string name="weight">Weight(kg)</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="fall_title">Warning!</string>
    <string name="fall_message">The User Fell!!!</string>
    <string name="steps_picker">Steps Goal</string>
    <string name="steps_change">Change Steps Goal</string>
    <string name="json_url"><![CDATA[http://ihome.ust.hk/~mcchow/cgi-bin/sensation_server.php?username=]]></string>
</resources>
