<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

    <TableRow android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textSize="18sp" />

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editText"
            tools:text="User1" />
    </TableRow>

    <TableRow android:gravity="center">
            <TextView
                android:id="@+id/weight"
                android:text="@string/weight"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:paddingTop="20dp"
                android:paddingBottom="10dp" />

        </TableRow>

    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">
        <NumberPicker
            android:id="@+id/numberPicker"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" />
    </TableRow>

    <TableRow android:gravity="center">
           <Button
               android:id="@+id/button1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/set"
               android:layout_marginRight="30dp" />

           <Button
               android:id="@+id/button2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/cancel"
               android:layout_marginLeft="30dp" />
       </TableRow>

</TableLayout>
